--- a/jericho/src/main/webapp/pages/edituser.xhtml
+++ b/jericho/src/main/webapp/pages/edituser.xhtml
@@ -8,7 +8,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>Welcome to JSF_PrimeFaces_Hibernate Project</title>
+	<title>PrimeFaces_Hibernate Project</title>
 	<link href="../resources/css/principal.css" rel="stylesheet" type="text/css" />
 </h:head>
 <body>
@@ -61,22 +61,28 @@
 	<h:form id="form">
     	 <p:growl id="messages" showDetail="true" autoUpdate="true" closable="true" />
 		<p:dataTable id="userList" value="#{userMBean.users}" var="item" editable="true"
-		>
+		widgetVar="usersTable" emptyMessage="No hay usuarios con este criterio"
+		filteredValue="#{userMBean.filteredUsers}"
+		sortMode="multiple"
+		paginator="true" rows="10"  
+		paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
+        rowsPerPageTemplate="5,10,15">
 
-			<f:facet name="header">
-				Lista de Usuarios
-			</f:facet>
-			
-			
+		<f:facet name="header">  
+            <p:outputPanel>  
+                <h:outputText value="Buscar usuario:" />  
+                <p:inputText id="globalFilter" onkeyup="usersTable.filter()" style="width:300px" />  
+            </p:outputPanel>  
+        </f:facet> 
         	
-			<p:column>
+			<p:column id="idColumn" filterBy="#{item.id}" headerText="Id" sortBy="#{item.id}">
 				<f:facet name="header">
 					<h:outputText value="ID" />
 				</f:facet>
 				<h:outputText value="#{item.id}" />
 			</p:column>
 			
-			<p:column headerText="Nombre" >
+			<p:column headerText="Nombre" id="nameColumn" filterBy="#{item.name}" filterMatchMode="contains" sortBy="#{item.name}" >
 				<p:cellEditor>
 					<f:facet name="output">
 						<h:outputText value="#{item.name}" />
@@ -87,7 +93,7 @@
 				</p:cellEditor>
 			</p:column>
 			
-			<p:column headerText="Password" >
+			<p:column headerText="Password" id="passColumn" filterBy="#{item.password}" filterMatchMode="endsWith" sortBy="#{item.password}">
 				<p:cellEditor>
 					<f:facet name="output">
 						<h:outputText value="#{item.password}" />
