--- a/alfaprime/src/main/webapp/pages/template.xhtml
+++ b/alfaprime/src/main/webapp/pages/template.xhtml
@@ -7,87 +7,87 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
- <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="#{appMBean.baseUrl}resources/css/default.css" rel="stylesheet" type="text/css" />
-        <link href="#{appMBean.baseUrl}resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
-        <title>Sistema de Control de Stock</title>
-    </h:head>
+<h:head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link href="#{appMBean.baseUrl}resources/css/default.css"	rel="stylesheet" type="text/css" />
+	<link href="#{appMBean.baseUrl}resources/css/cssLayout.css"	rel="stylesheet" type="text/css" />
+	<title>Sistema de Control de Stock</title>
+</h:head>
 
 <h:body>
 
+	<div id="conteiner">
 
+		<div id="top" class="ui-widget-header ui-corner-all">
+			<ui:insert name="top">Sistema de Control de Stock</ui:insert>
+		</div>
 
-	<div id="top" class="ui-widget-header ui-corner-all">
-		<ui:insert name="top">Sistema de Control de Stock</ui:insert>
-	</div>
+		<div id="menu">
+			<h:form>
 
-	<div id="menu">
-		<h:form>
-
-			<p:menubar>
-				<p:submenu label="File" icon="ui-icon-document">
-					<p:submenu label="New" icon="ui-icon-contact">
-						<p:menuitem value="Project" url="#" />
-						<p:menuitem value="Other" url="#" />
-					</p:submenu>
-					<p:menuitem value="Open" url="#" />
-					<p:separator />
-					<p:menuitem value="Quit" url="#" />
-				</p:submenu>
-
-				<p:submenu label="Edit" icon="ui-icon-pencil">
-					<p:menuitem value="Undo" url="#"
-						icon="ui-icon-arrowreturnthick-1-w" />
-					<p:menuitem value="Redo" url="#"
-						icon="ui-icon-arrowreturnthick-1-e" />
-				</p:submenu>
-
-				<p:submenu label="Help" icon="ui-icon-help">
-					<p:menuitem value="Contents" url="#" />
-					<p:submenu label="Search" icon="ui-icon-search">
-						<p:submenu label="Text">
-							<p:menuitem value="Workspace" url="#" />
+				<p:menubar>
+					<p:submenu label="Sistema" icon="ui-icon-document">
+						<p:submenu label="Seguridad" icon="ui-icon-contact">
+							<p:menuitem value="Usuario" url="#{appBean}usuario/index.xhtml" />
+							<p:menuitem value="Rol" url="#" />
 						</p:submenu>
-						<p:menuitem value="File" url="#" />
+						<p:menuitem value="Configuracion" url="#" icon="ui-icon-gear" />
+						<p:menuitem value="Ayuda" icon="ui-icon-help" url="#" />
+						<p:separator />
+						<p:menuitem value="Salir" actionListener="#{loginBean.logout}"
+							oncomplete="handleLoginRequest(xhr, status, args)"
+							icon="ui-icon-close" />
 					</p:submenu>
-				</p:submenu>
 
-				<p:submenu label="Actions" icon="ui-icon-gear">
-					<p:submenu label="Ajax" icon="ui-icon-refresh">
-						<p:menuitem value="Save" actionListener="#{menuMBean.save}"
-							icon="ui-icon-disk"  />
-						<p:menuitem value="Update" actionListener="#{menuMBean.update}"
-							icon="ui-icon-arrowrefresh-1-w" />
+					<p:submenu label="Edit" icon="ui-icon-pencil">
+						<p:menuitem value="Undo" url="#"
+							icon="ui-icon-arrowreturnthick-1-w" />
+						<p:menuitem value="Redo" url="#"
+							icon="ui-icon-arrowreturnthick-1-e" />
 					</p:submenu>
-					<p:submenu label="Non-Ajax" icon="ui-icon-newwin">
-						<p:menuitem value="Delete" actionListener="#{menuMBean.delete}"
-							icon="ui-icon-close" ajax="false" />
+
+					<p:submenu label="Search" icon="ui-icon-search">
+
 					</p:submenu>
-				</p:submenu>
 
-				<p:menuitem value="Salir" actionListener="#{loginBean.logout}" icon="ui-icon-close" 
-				 oncomplete="handleLoginRequest(xhr, status, args)"/>
+					<p:submenu label="Actions" icon="ui-icon-gear">
+						<p:submenu label="Ajax" icon="ui-icon-refresh">
+							<p:menuitem value="Save" actionListener="#{menuMBean.save}"
+								icon="ui-icon-disk" />
+							<p:menuitem value="Update" actionListener="#{menuMBean.update}"
+								icon="ui-icon-arrowrefresh-1-w" />
+						</p:submenu>
+						<p:submenu label="Non-Ajax" icon="ui-icon-newwin">
+							<p:menuitem value="Delete" actionListener="#{menuMBean.delete}"
+								icon="ui-icon-close" ajax="false" />
+						</p:submenu>
+					</p:submenu>
 
-			</p:menubar>
+					<p:menuitem value="Salir" actionListener="#{loginBean.logout}"
+						icon="ui-icon-close"
+						oncomplete="handleLoginRequest(xhr, status, args)" />
+
+				</p:menubar>
 
 
-		</h:form>
+			</h:form>
+		</div>
+
+		<div id="content"
+			class="center_content ui-widget ui-widget-content ui-cornerall">
+			<ui:insert name="content">Content</ui:insert>
+		</div>
+
+
+		<div id="bottom" class="ui-widget-header ui-corner-all">
+			<ui:insert name="bottom">
+				&Copy; Ariel Duarte ©2013 </ui:insert>
+		</div>
 	</div>
-
-	<div id="content" class="center_content">
-		<ui:insert name="content">Content</ui:insert>
-	</div>
-
-
-	<div id="bottom" class="ui-widget-header ui-corner-all">
-		<ui:insert name="bottom">&Copy; Ariel Duarte (c)2013</ui:insert>
-	</div>
-	
 	<script type="text/javascript">
 		function handleLoginRequest(xhr, status, args) {
 			if (args.loggetOut) {
-				location.href=args.ruta;
+				location.href = args.ruta;
 			}
 		}
 	</script>
