--- a/alfaprime/src/main/webapp/pages/usuario/index.xhtml
+++ b/alfaprime/src/main/webapp/pages/usuario/index.xhtml
@@ -17,6 +17,9 @@
 			<h:form>
 			<p:commandButton id="btnAddUsuario" update=":formAdd"
 			oncomplete="PF('usuarioDialogAdd').show()" icon="ui-icon-plusthick" title="Agregar" value="Nuevo Usuario"/>
+			
+			<p:commandButton id="btnPrintUsuario" update=":formPrint"
+			oncomplete="PF('usuarioDialogPrint').show()" icon="ui-icon-print" title="Imprimir" value="Informe de Usuarios"/>
 			</h:form>
 			
 			<p:separator></p:separator>
@@ -185,58 +188,102 @@
 				</p:dialog>
 			</h:form>
 
-		<h:form>
-			<h:panelGrid columns="2">
-				<p:panel header="Export todos los datos">
-					<h:commandLink>
-						<p:graphicImage value="/resources/images/excel.png" />
-						<p:dataExporter type="xls" target=":formDataTable:usu" fileName="Usuarios" />
-					</h:commandLink>
+			<h:form id="formPrint">
+				<p:dialog header="Informe de Usuarios" widgetVar="usuarioDialogPrint" sortMode="multiple"
+					resizable="false" id="usuarioDlgPrint" showEffect="fade" hideEffect="explode" modal="true">
+				<p:dataTable id="usuprint" var="item" value="#{usuarioMBean.usuarios}" 
+							selection="#{usuarioMBean.selectedUsuario}" 
+			                emptyMessage="No hay usuarios con este criterio"
+			                paginator="true" rows="10"
+			                paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+			                paginatorPosition="bottom"
+			                rowKey="#{item.id}"
+			                selectionMode="single"
+			                filteredValue="#{usuarioMBean.filteredUsuarios}" 
+			               >
+							<p:column style="width:6%" sortBy="#{item.id}">
+								<f:facet name="header">  
+	            					<h:outputText value="Id" />  
+	       						</f:facet> 
+								<h:outputText value="#{item.id}" />
+							</p:column>
 
-					<h:commandLink>
-						<p:graphicImage value="/resources/images/pdf.png" />
-						<p:dataExporter type="pdf" target=":formDataTable:usu" fileName="Usuarios" />
-					</h:commandLink>
+							<p:column style="width:24%" sortBy="#{item.nombre}">
+								<f:facet name="header">  
+	            					<h:outputText value="Nombre" />  
+	       						</f:facet>
+								<h:outputText value="#{item.nombre}" />
+							</p:column>
 
-					<h:commandLink>
-						<p:graphicImage value="/resources/images/csv.png" />
-						<p:dataExporter type="csv" target=":formDataTable:usu" fileName="Usuarios" />
-					</h:commandLink>
+							<p:column style="width:24%" sortBy="#{item.rol.nombre}">
+								<f:facet name="header">  
+	            					<h:outputText value="Rol" />  
+	       						</f:facet>
+								<h:outputText value="#{item.rol.nombre}" />
+							</p:column>
 
-					<h:commandLink>
-						<p:graphicImage value="/resources/images/xml.png" />
-						<p:dataExporter type="xml" target=":formDataTable:usu" fileName="Usuarios" />
-					</h:commandLink>
-				</p:panel>
-				
+							<p:column style="width:24%">
+								<f:facet name="header">  
+	            					<h:outputText value="Email" />  
+	       						</f:facet>
+								<h:outputText value="#{item.email}" />
+							</p:column>
+				</p:dataTable>
 
-				<p:panel header="Exportar datos de la pagina">
-					<h:commandLink>
-						<p:graphicImage value="/resources/images/excel.png" />
-						<p:dataExporter type="xls" target=":formDataTable:usu" fileName="Usuarios"
-							pageOnly="true" />
-					</h:commandLink>
 
-					<h:commandLink>
-						<p:graphicImage value="/resources/images/pdf.png" />
-						<p:dataExporter type="pdf" target=":formDataTable:usu" fileName="Usuarios"
-							pageOnly="true" />
-					</h:commandLink>
+					<h:panelGrid columns="2">
+						<p:panel header="Exportar todo">
+							<h:commandLink>
+								<p:graphicImage value="/resources/images/excel.png" />
+								<p:dataExporter type="xls" target="usuprint" fileName="Usuarios" />
+							</h:commandLink>
 
-					<h:commandLink>
-						<p:graphicImage value="/resources/images/csv.png" />
-						<p:dataExporter type="csv" target=":formDataTable:usu" fileName="Usuarios"
-							pageOnly="true" />
-					</h:commandLink>
+							<h:commandLink>
+								<p:graphicImage value="/resources/images/pdf.png" />
+								<p:dataExporter type="pdf" target=":formPrint:usuprint"
+									fileName="Usuarios" />
+							</h:commandLink>
 
-					<h:commandLink>
-						<p:graphicImage value="/resources/images/xml.png" />
-						<p:dataExporter type="xml" target=":formDataTable:usu" fileName="Usuarios"
-							pageOnly="true" />
-					</h:commandLink>
-				</p:panel>
-			</h:panelGrid>
+							<h:commandLink>
+								<p:graphicImage value="/resources/images/csv.png" />
+								<p:dataExporter type="csv" target="usuprint" fileName="Usuarios" />
+							</h:commandLink>
+
+							<h:commandLink>
+								<p:graphicImage value="/resources/images/xml.png" />
+								<p:dataExporter type="xml" target="usuprint" fileName="Usuarios" />
+							</h:commandLink>
+						</p:panel>
+
+						<p:panel header="Exportar pagina">
+							<h:commandLink>
+								<p:graphicImage value="/resources/images/excel.png" />
+								<p:dataExporter type="xls" target="usuprint" fileName="Usuarios"
+									pageOnly="true" />
+							</h:commandLink>
+
+							<h:commandLink>
+								<p:graphicImage value="/resources/images/pdf.png" />
+								<p:dataExporter type="pdf" target="usuprint" fileName="Usuarios"
+									pageOnly="true" />
+							</h:commandLink>
+
+							<h:commandLink>
+								<p:graphicImage value="/resources/images/csv.png" />
+								<p:dataExporter type="csv" target="usuprint" fileName="Usuarios"
+									pageOnly="true" />
+							</h:commandLink>
+
+							<h:commandLink>
+								<p:graphicImage value="/resources/images/xml.png" />
+								<p:dataExporter type="xml" target="usuprint" fileName="Usuarios"
+									pageOnly="true" />
+							</h:commandLink>
+						</p:panel>
+					</h:panelGrid>
+				</p:dialog>
 			</h:form>
+		
 		</ui:define>
 	</ui:composition>
 </h:body>
